--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -18,6 +18,14 @@
 
   "footer": {
     "impressum": "Impressum"
+  },
+
+  {
+  "confession": {
+    "prev": "Zurück",
+    "next": "Weiter",
+    "overview": "Kapitelübersicht"
+    }
   }
 }
 
